--- a/reports/index.html
+++ b/reports/index.html
@@ -27,12 +27,106 @@
 
 <h4>User reports</h4>
 
-Currently we have more than 300 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>.
+Currently we have more than 350 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>.
 
 <br>
 <a href="/references">Overview</a> with logos of some FAI users.
 <hr>
 <div>
+
+<b>From:</b> anonymous, tinkster +AT+proton==me=
+<br><b>Date:</b> Fri, 03 May 2024 03:39:07 +0000
+<pre>
+How many hosts have you installed using fai? New install, so far <b>two</b> in testing
+Which version of fai are you using? <b>6.2.2</b>
+Which version are you using as your install kernel? Plain Debian
+
+Which types of hosts are you installing with fai? Base installation for all kinds of server-class machines, mix of VM & metal
+
+How do you boot your hosts? via network (PXE, DHCP):
+Does the default install kernel recognize all your hardware? Yes
+Do you manage your configuration space under version control? Yes, git repo
+How big is your config space (Mbytes, # of files)? 560K, #110
+How many files do you have in ../config/files? The default 11 for now
+
+What types of scripts are you using for local customization? None out of FAI at this stage, after a base install ansible takes over
+
+<b>What is the business of your company/organisation?</b> research network
+<br><b>Additional comments:</b>
+We (intend to) use FAI for new server deployments/hardware replacmeent tasks.
+The reason I installed FAI is that our foreman installation fell in
+disrepair maybe a year before I joined the company, and proved to be
+too hard to reanimate or be replaced w/ a new version of foreman. And
+we're about to roll out a bunch of replacements for our entire
+perfsonar and out of band machine fleet.
+</pre> <HR>
+
+
+<b>From:</b> Vimec
+<br><b>Date:</b> Mon, 17 Jun 2024 17:18:56 +0200
+<pre>
+How many hosts have you installed using fai? <b>not sure but 100+</b>
+Which version of fai are you using? the version that debian 10 (buster) provides <b>5.10.3~buster1</b>
+Which version are you using as your install kernel? plain Debian 10 kernel
+
+Which types of hosts are you installing with fai? customized server
+How do you boot your hosts? USB stick but I would like to use PXE, just never got around to it.
+Does the default install kernel recognize all your hardware? Which drivers are missing? I'm not sure it matters, but no ixpio and elotouch drivers are not installed (also not sure they should be)
+Do you manage your configuration space under version control? yes, in a git repo along with a bunch of custom shell scripts
+How big is your config space (Mbytes, # of files)? 180 files, 5.8 Megabyte
+How many files do you have in ../config/files? 49
+What types of scripts are you using for local customization? bash scripts
+
+<b>What is the business of your company/organisation?</b> <a href="https://vimec.nl">Vimec Applied Vision Technology B.V.</a>, Inspection of Pharmaceutical Glass Packaging
+<br><b>Additional comments:</b>
+We use FAI to create an 'initial ISO' for the base-installation of our server-systems.
+</pre> <HR>
+
+
+<b>From:</b> anonymous, Sorbonne Université
+<br><b>Date:</b> Thu, 6 Jun 2024 13:15:28 +0200
+<pre>
+Are you using the FAI.me build service? No
+How many hosts have you installed using fai? <b>50+</b>
+Which version of fai are you using? <b>6.2.2</b>
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai? cluster nodes and general-purpose servers
+How do you boot your hosts? via network, PXE+DHCP
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? n/a
+Do you manage your configuration space under version control? yes
+How big is your config space (Mbytes, # of files)? 7.4 MB, 494 files
+How many files do you have in ../config/files? 410 files
+What types of scripts are you using for local customization? shell
+
+<b>What is the business of your company/organisation?</b> research & education, <a href="https://www.sorbonne-universite.fr">Sorbonne Université</a>
+<br><b>Additional comments:</b>
+FAI does its job reliably and keeps things simple, great tool.
+</pre> <HR>
+
+
+<b>From:</b> Service informatique IGE, university grenoble-alpes
+<br><b>Date:</b> Thu, 6 Jun 2024 17:00:59 +0200
+<pre>
+Are you using the FAI.me build service? We don’t know this service ...
+How many hosts have you installed using fai? <b>About 20</b>, we just begin with FAI
+Which version of fai are you using? <b>6.2</b>
+
+Which version are you using as your install kernel? plain Debian
+Which types of hosts are you installing with fai? Desktops, laptop
+
+How do you boot your hosts? network (PXE, DHCP)
+Does the default install kernel recognize all your hardware?
+Which drivers are missing? Wifi, Nvidia cards
+Do you manage your configuration space under version control? Yes (git)
+How big is your config space (Mbytes, # of files)? 832K, 151 files
+How many files do you have in ../config/files? 11
+What types of scripts are you using for local customization? Shell
+
+<b>What is the business of your company/organisation?</b> Research in environment, <a href="https://www.ige-grenoble.fr">Institut des Géosciences de l’Environnement</a>
+</pre> <HR>
+
 
 <b>From:</b> Ralf Aumüller
 <br><b>Date:</b> Thu, 21 Dec 2023 14:43:48 +0100
