--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
+<li>[June 20, 2024] The FAIme customized installation ISOs now support Debian 13 (testing aka Trixie)</li>
 <li>[June 11, 2024] The FAIme service now supports Ubuntu 24.04</li>
 <li>[Mar 9, 2024] <a href="/fai-cd/">New ISO images</a> availabe using FAI 6.2.2</li>
 <li>[Jan 21, 2024] FAI 6.2 <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2024-January/013148.html">released</a></li>
