fix company name

--- a/reports/index.html
+++ b/reports/index.html
@@ -62,7 +62,7 @@ perfsonar and out of band machine fleet.
 </pre> <HR>
 
 
-<b>From:</b> Vimec
+<b>From:</b> Vimec.nl
 <br><b>Date:</b> Mon, 17 Jun 2024 17:18:56 +0200
 <pre>
 How many hosts have you installed using fai? <b>not sure but 100+</b>
