add two references

--- a/references/index.html
+++ b/references/index.html
@@ -141,6 +141,10 @@
           <img class="imgframe" alt="FAI user" src="pics/mpsd.png" ></a>
         <a href="https://lfenergy.org/projects/seapath">
           <img class="imgframe" alt="FAI user" src="pics/seapath.png" ></a>
+        <a href="https://www.sorbonne-universite.fr">
+          <img class="imgframe" alt="FAI user" src="pics/sorbonne.png" ></a>
+        <a href="https://www.vimec.nl">
+          <img class="imgframe" alt="FAI user" src="pics/vimec.png" ></a>
 
         <p>
           There are
