add release name

--- a/FAIme-ubuntu/key-distr-desk-pkgs.html
+++ b/FAIme-ubuntu/key-distr-desk-pkgs.html
@@ -31,7 +31,7 @@
 	      <div class="col s12 m6">
 		<div class="input-field">
 		  <select class="browser-default" name="suite">
-		    <option value="ubuntu" selected="selected">Ubuntu LTS 24.04
+		    <option value="ubuntu" selected="selected">Ubuntu LTS 24.04 (Noble Numbat)
 		    </option>
 		  </select>
 		</div>
