use new include file

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -99,6 +99,8 @@
 
             <!--#include virtual="../key-distr-desk-pkgs.html" -->
 
+            <!--#include virtual="../postinst-grub.html" -->
+
             <!--#include virtual="../hints.html" -->
 
             <div class="col s12 m6">
