--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -33,9 +33,9 @@
 	      <div class="col s12 m6">
 		<div class="input-field">
 		  <select class="browser-default" name="suite">
-		    <option value="bullseye">Debian 11 bullseye (oldstable)
+		    <option value="bullseye">Debian 11 Bullseye (oldstable)
 		    </option>
-		    <option value="bookworm" selected="selected">Debian 12 bookworm (stable)
+		    <option value="bookworm" selected="selected">Debian 12 Bookworm (stable)
 		    </option>
 		  </select>
 		</div>
