--- a/reports/index.html
+++ b/reports/index.html
@@ -34,6 +34,34 @@ Currently we have more than 350 detailed reports. Please also fill out the <a hr
 <hr>
 <div>
 
+
+<b>From:</b> Marco Ferrara
+<br><b>Date:</b> Fri, 19 Jul 2024 16:33:04 +0100
+<pre>
+Are you using the FAI.me build service? No
+How many hosts have you installed using fai? <b>2500+</b>
+Which version of fai are you using? 4.3.1 migrated to <b>5.10.3</b> last year and now I'm trying to update to 6.2.3
+Which version are you using as your install kernel?
+   Debian Jessie with FAI 4.3.1
+   Ubuntu Focal  with FAI 5.10.3
+   Ubuntu Noble  with FAI 6.2.3
+
+Which types of hosts are you installing with fai? base servers installation
+    and full configuration using class, vm and metal
+
+How do you boot your hosts?
+   via network (PXE, DHCP): Yes
+   using FAI-CD: Yes
+Does the default install kernel recognize all your hardware? Yes
+Do you manage your configuration space under version control? Yes
+How big is your config space (Mbytes, # of files)? 17 MB 3523 files
+How many files do you have in ../config/files? 2455
+What types of scripts are you using for local customization? shell, perl
+
+<b>What is the business of your company/organisation?</b> ISP in UK
+</pre> <HR>
+
+
 <b>From:</b> anonymous, tinkster +AT+proton==me=
 <br><b>Date:</b> Fri, 03 May 2024 03:39:07 +0000
 <pre>
