add live support

--- a/FAIme-ubuntu/service.html
+++ b/FAIme-ubuntu/service.html
@@ -30,8 +30,8 @@
 
           <h4>  FAI.me. Build your own installation media<br></h4>
           <h3> <p><p>CURRENTLY UPGRADING TO A NEW FAI VERSION.
-              <br> Mon, 24 Jul 2023 15:32:36 +0200
-              <br><br>Service will be back online in one or two days.
+              <br> Tue, 11 Jun 2024 15:10:09 +0200
+              <br><br>Ubuntu images service will be back online in 1-2 days.
           </h3>
 
           </div>
