--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -40,12 +40,13 @@
 	<div class="row">
 	  <div class="col s12">
 	    <h5>
-	      FAI.me. Build your own installation ISO for <b>Debian</b>
+	      FAI.me. Build your own  <b>installation ISO for Debian</b>
             <!--#include virtual="bug.html" -->
 	    </h5>
               <ul style="font-size: 120%" class="browser-default">
-                <li><a href="../FAIme-ubuntu">Ubuntu version</a><p></li>
-                <li><a href="../FAIme/cloud">Cloud images</a></li>
+                <li><a href="../FAIme-ubuntu">Ubuntu installation ISO</a></li>
+                <li><a href="../FAIme/cloud">Debian cloud images</a></li>
+                <li><a href="../FAIme/live">Debian live images</a></li>
               </ul>
 
 	    <div class="divider"></div>
@@ -111,7 +112,7 @@
 
 	    </div>
 
-            <!--#include virtual="key-distr-desk-pkgs.html" -->
+            <!--#include virtual="key-distr-desk-pkgs2.html" -->
 
 	    <div id="adv3" style="display: none;">
 
