--- a/FAIme-ubuntu/index.html
+++ b/FAIme-ubuntu/index.html
@@ -44,8 +44,9 @@
             <!--#include virtual="bug.html" -->
 	    </h5>
               <ul style="font-size: 120%" class="browser-default">
-                <li><a href="../FAIme">Debian version</a><p></li>
-                <li><a href="../FAIme/cloud">Cloud images</a></li>
+                <li><a href="../FAIme">Debian installation ISO</a></li>
+                <li><a href="../FAIme/cloud">Debian cloud images</a></li>
+                <li><a href="../FAIme/live">Debian live images</a></li>
               </ul>
 
 	    <div class="divider"></div>
