--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -21,6 +21,7 @@
 		  <option value="tw">Chinese (Traditional) / 中文(繁體)</option>
 		  <option value="hi">Hindi / हिन्दी</option>
 		  <option value="ja">Japanese / 日本語</option>
+		  <option value="kr">Korean / 한국어</option>
 		</select>
 	      </div>
 	    </div>
