move language selection to its own file

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -98,6 +98,7 @@
 
             <!--#include virtual="../root.html" -->
 
+            <!--#include virtual="../language.html" -->
             <!--#include virtual="../key-distr-desk-pkgs.html" -->
 
             <!--#include virtual="../postinst-grub.html" -->
