--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -112,6 +112,7 @@
 
 	    </div>
 
+            <!--#include virtual="language.html" -->
             <!--#include virtual="key-distr-desk-pkgs2.html" -->
 
 	    <div id="adv3" style="display: none;">
