--- a/FAIme/live/index.html
+++ b/FAIme/live/index.html
@@ -73,6 +73,7 @@
 
             <!--#include virtual="../root.html" -->
 
+            <!--#include virtual="../language.html" -->
             <!--#include virtual="../key-distr-desk-pkgs2.html" -->
 
             <!--#include virtual="../postinst-grub.html" -->
