--- a/FAIme-ubuntu/index.html
+++ b/FAIme-ubuntu/index.html
@@ -110,6 +110,7 @@
 
 	    </div>
 
+            <!--#include virtual="language.html" -->
             <!--#include virtual="key-distr-desk-pkgs.html" -->
 
 	    <div id="adv3" style="display: none;">
