--- a/talks/index.html
+++ b/talks/index.html
@@ -157,7 +157,7 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 ">DebianReunionHamburg 2023</a>: I gave a talk about "Looking at some web statistics of www.debian.org"
 </li>
 
-<li> <a href="https://berlin2024.mini.debconf.org/talks/19-past-changes-and-future-plans-for-the-debian-web-pages/"> Past changes and future plans for the Debian web pages </a>, video
+<li> MiniDebConf Berlin 2024: <a href="https://berlin2024.mini.debconf.org/talks/19-past-changes-and-future-plans-for-the-debian-web-pages/"> Past changes and future plans for the Debian web pages </a>, video
 <a href="https://meetings-archive.debian.net/pub/debian-meetings/2024/MiniDebConf-Berlin/18-past-changes-and-future-plans-for-the-debian-web-pages.lq.webm">LQ</a>
 <a href="https://meetings-archive.debian.net/pub/debian-meetings/2024/MiniDebConf-Berlin/18-past-changes-and-future-plans-for-the-debian-web-pages.webm">HQ</a>
 </li>
