make both files more in sync, not completly

--- a/FAIme-ubuntu/index.html
+++ b/FAIme-ubuntu/index.html
@@ -94,16 +94,16 @@
 
 	      <div class="col s12 m10">
 		<p class="col s12 m4">
-		  Add one public available package repository
+		  You can add one public available package repository
 		</p>
 		<div class="col s12 m6 input-field">
 		  <input type="text" id="repo" name="repo">
 		  <span class="helper-text">
 		    Only http(s) is allowed. Examples:
 		    <br>
-		    http://download.proxmox.com/debian/pve bullseye pve-no-subscription
+		    http://download.proxmox.com/debian/pve bookworm pve-no-subscription
 		    <br>
-		    https://download.docker.com/linux/debian bullseye stable
+		    https://download.docker.com/linux/debian bookworm stable
 		  </span>
 		</div>
 	      </div>
@@ -118,7 +118,6 @@
               <!--#include virtual="../FAIme/postinst-grub.html" -->
 
 	      <div class="col s12 m10">
-
 		<div class="col s12 m12">
 		  <label>
 		    <input class="with-gap" type="radio" name="cl8" value="REBOOT">
@@ -134,7 +133,6 @@
 		    <input class="with-gap" type="radio" name="cl8" value="" checked="checked">
 		    <span>wait to press Return at the end.</span>
 		  </label>
-
 		</div>
 	      </div>
 
