--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -94,7 +94,7 @@
 
 	      <div class="col s12 m10">
 		<p class="col s12 m4">
-		  You can add one public available Debian package repository
+		  You can add one public available package repository
 		</p>
 		<div class="col s12 m6 input-field">
 		  <input type="text" id="repo" name="repo">
