--- a/FAIme/language.html
+++ b/FAIme/language.html
@@ -20,6 +20,7 @@
 		  <option value="cn">Chinese (Simplified) /中文(简体)</option>
 		  <option value="tw">Chinese (Traditional) / 中文(繁體)</option>
 		  <option value="hi">Hindi / हिन्दी</option>
+		  <option value="ml">Malayalam / മലയാളം</option>
 		  <option value="ja">Japanese / 日本語</option>
 		  <option value="kr">Korean / 한국어</option>
 		</select>
