remove duplicate item

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.h
             <ul>
               <li>
                 <span class="valign-wrapper">
-                  <i class="material-icons">done</i>&nbsp;<span>Installs Debian, Ubuntu, Rocky Linux, CentOS, Rocky Linux, RHEL, SUSE, ...</span></span>
+                  <i class="material-icons">done</i>&nbsp;<span>Installs Debian, Ubuntu, Rocky Linux, CentOS, RHEL, SUSE, ...</span></span>
               </li>
               <li>
                 <span class="valign-wrapper">
