--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="row valign-wrapper">
           <div class="col s7 m8">
             <h4>About FAI</h4>
-            <p>FAI is a tool for unattended mass deployment of Linux. It's a system to install and configure Linux systems and software packages on computers as well as virtual machines, from small labs to large-scale infrastructures like clusters and virtual
+            <p>FAI is a tool for unattended mass deployment of Linux. It's a system to install and configure Linux systems and software packages on computers as well as virtual machines, from small labs to large-scale infrastructures like clusters and cloud
               environments. You can take one or more virgin PC's, turn on the power, and after a few minutes, the systems are installed, and completely configured to your exact needs, without any interaction necessary.
             </p>
           </div>
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="col s12">
             <h5>About <a href="/FAIme">FAI.me</a> </h5>
-            <p>FAI.me is a web based build service to create custom installation images or ready-to-boot disk images for desktops, server, virtual machines or cloud-computing platforms.
+            <p>FAI.me is a web based build service to create custom installation or live images or ready-to-boot disk images for desktops, server, virtual machines or cloud-computing platforms.
             </p>
 
           </div>
@@ -85,11 +85,11 @@ I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.h
               </li>
               <li>
                 <span class="valign-wrapper">
-                  <i class="material-icons">done</i>&nbsp;<span>Automated installation of virtual machines using KVM, XEN or VirtualBox and Vserver</span></span>
+                  <i class="material-icons">done</i>&nbsp;<span>Automated installation of virtual machines using KVM, VirtualBox and VMware</span></span>
               </li>
               <li>
                 <span class="valign-wrapper">
-                  <i class="material-icons">done</i>&nbsp;<span>Creation of custom disk images for OpenStack, KVM, VirtualBox, VMware, Azure, EC2, GCE</span></span>
+                  <i class="material-icons">done</i>&nbsp;<span>Creation of custom disk images for OpenStack, KVM, Azure, EC2, GCE and others</span></span>
               </li>
               <li>
                 <span class="valign-wrapper">
