--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
-<li>[Aug, 17, 2024] The FAIme web service now support Debian live images</li>
-<li>[June 20, 2024] The FAIme customized installation media now support Debian 13 (testing aka Trixie) and Ubuntu 24.04</li>
+<li>[Aug, 17, 2024] The FAIme web service now supports Debian live images</li>
+<li>[June 20, 2024] The FAIme service provides customized installation media using Debian 13 (testing aka Trixie) and Ubuntu 24.04</li>
 <li>[Mar 9, 2024] <a href="/fai-cd/">New ISO images</a> availabe using FAI 6.2.2</li>
 <li>[Jan 21, 2024] FAI 6.2 <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2024-January/013148.html">released</a></li>
 <li>[Jun 10, 2023] A <a href="/fai-cd/debian12-live-xfce.iso">Debian Live ISO</a> with XFCE desktop</li>
@@ -85,7 +85,7 @@
               </li>
               <li>
                 <span class="valign-wrapper">
-                  <i class="material-icons">done</i>&nbsp;<span>Creation of custom disk images for OpenStack, KVM, Azure, EC2, GCE and others</span></span>
+                  <i class="material-icons">done</i>&nbsp;<span>Customized cloud images for OpenStack, KVM, Azure, EC2, GCE and others</span></span>
               </li>
               <li>
                 <span class="valign-wrapper">
