more infos for beginner about FAI.me

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="row">
           <div class="col s12">
             <h5>About <a href="/FAIme">FAI.me</a> </h5>
-            <p>FAI.me is a web based build service to create custom installation or live images or ready-to-boot disk images for desktops, server, virtual machines or cloud-computing platforms.
+            <p>The easiest way to start with FAI is using the FAI.me service. It's is a web based build service to create custom installation or live media or ready-to-boot disk images for desktops, server, virtual machines or cloud-computing platforms.
+              There's no need to install the FAI software on your local computer.
             </p>
 
           </div>
