--- a/FAIme/live/index.html
+++ b/FAIme/live/index.html
@@ -49,8 +49,8 @@
               </ul>
 	    <div class="divider"></div>
 	    <p>
-              This live image that can be
-              used with any virtual machine. It's running a 64bit Debian Linux.
+              This live image that can be used on a notebook, PC or
+              with any virtual machine with 64-bit Intel or AMD CPU. It's running Debian Linux.
    	    </p>
 
           </div>
