--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -1,4 +1,3 @@
-
 	    <!-- Distribution Select -->
 	    <div class="col s12 m10">
 	      <p class="col s12 m4">
@@ -13,10 +12,9 @@
 		    </option>
 		  </select>
 		</div>
-		<label>
-		  <input type="checkbox" class="filled-in" name="cl1" value="BACKPORTS">
-		  <span>Enable backports including newer kernel</span>
-		</label>
+
+                <p>  <input type="checkbox" class="fai" id="cl1" name="cl1" value="BACKPORTS"/>
+                  <label for="cl1">Enable backports including newer kernel</label> </p>
 	      </div>
 	    </div>
 
@@ -48,16 +46,12 @@
 	      </p>
 	      <ul class="col s12 m6">
 		<li>
-		  <label>
-		    <input type="checkbox" class="filled-in" name="cl2" value="DEBIAN_DEVEL">
-		    <span>Debian developer tools</span>
-		  </label>
+                 <input type="checkbox" class="fai" id="cl2" name="cl2" value="DEBIAN_DEVEL"/>
+                  <label for="cl2">Debian developer tools</label>
 		</li>
 		<li>
-		  <label>
-		    <input type="checkbox" class="filled-in" name="cl3" value="WEBSERVER">
-		    <span>Web server</span>
-		  </label>
+                 <input type="checkbox" class="fai" id="cl3" name="cl3" value="WEBSERVER"/>
+                  <label for="cl2">Web server</label>
 		</li>
                 <!--
 		    <li>
@@ -68,22 +62,16 @@
 		    </li>
                     -->
 		<li>
-		  <label>
-		    <input type="checkbox" class="filled-in" name="cl5" value="SSH_SERVER" checked="checked">
-		    <span>Openssh server</span>
-		  </label>
+		    <input type="checkbox" class="fai" id="cl5" name="cl5" value="SSH_SERVER" checked="checked"/>
+                  <label for="cl5">Openssh server</label>
 		</li>
 		<li>
-		  <label>
-		    <input type="checkbox" class="filled-in" name="cl6" value="STANDARD" checked="checked">
-		    <span>Standard system tools</span>
-		  </label>
+		    <input type="checkbox" class="fai" id="cl6" name="cl6" value="STANDARD" checked="checked"/>
+		    <label for="cl6">Standard system tools</label>
 		</li>
 		<li>
-		  <label>
-		    <input type="checkbox" class="filled-in" name="cl7" value="NONFREE" checked="checked">
-		    <span>Non-free Linux firmware</span>
-		  </label>
+		    <input type="checkbox" class="fai" id="cl7" name="cl7" value="NONFREE" checked="checked"/>
+		    <label for="cl7">Non-free Linux firmware</label>
 		</li>
 	      </ul>
 	    </div>
@@ -100,11 +88,9 @@
 	      <p class="col s12 m4">
                 <br> <br>
 	      </p>
-	      <div class="col s12 m6 input-field">
-		<label>
-		  <input type="checkbox" class="filled-in" name="cl9" value="RECOMMENDS">
-		  <span class="helper-text">Enable recommended packages for your custom package list</span>
-		</label>
+	      <div class="col s12 m6">
+		  <input type="checkbox" class="fai" id="cl9" name="cl9" value="RECOMMENDS"/>
+		  <label for="cl9" class="helper-text">Enable recommended packages for your custom package list</label>
               </div>
 	    </div>
 
