--- a/talks/index.html
+++ b/talks/index.html
@@ -162,12 +162,13 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 <a href="https://meetings-archive.debian.net/pub/debian-meetings/2024/MiniDebConf-Berlin/18-past-changes-and-future-plans-for-the-debian-web-pages.webm">HQ</a>
 </li>
 
-
+<li> DebConf 2024 in South Korea: <a href="https://debconf24.debconf.org/talks/136-a-web-service-for-building-your-own-customized-debian-live-image/">A web service for building your own customized Debian live image</a>
+</li>
 </ul>
 <p>
 
 <ADDRESS>
-  Thu, 04 Jul 2024 13:42:49 +0200
+  Thu, 05 Sep 2024 13:15:58 +0200
 </ADDRESS>
 
 
