add new upstream project

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -27,6 +27,9 @@
 
 <ul class="col s12 browser-default">
 
+<li> <a href="https://github.com/berzdev/ansible-fai">https://github.com/berzdev/ansible-fai</a>
+is a set of ansible roles for a multi location environment.
+
 <li> <a href="https://wiki.debian.org/DebianLAN">Debian Local Area
 Network</a> is a project, that provides a FAI configuration for
 setting up a local network with centralized user and machine
