--- a/references/index.html
+++ b/references/index.html
@@ -37,6 +37,8 @@
           <img class="imgframe" alt="FAI user" src="pics/brandwatch.png"></a>
         <a href="http://www.cae.wisc.edu">
           <img class="imgframe" alt="FAI user" src="pics/cae.png"></a>
+        <a href="http://www.memorysolution.de">
+          <img class="imgframe" alt="FAI user" src="pics/memorysolution.png"></a>
         <a href="https://dropbox.com">
           <img class="imgframe" alt="FAI user" src="pics/dropbox.png"></a>
         <a href="https://www.csail.mit.edu">
