use new buttons

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -42,13 +42,8 @@
 	    <h5>
 	      FAI.me. Build your own  <b>installation ISO for Debian</b>
             <!--#include virtual="bug.html" -->
-	    </h5>
-              <ul style="font-size: 120%" class="browser-default">
-                <li><a href="../FAIme-ubuntu">Ubuntu installation ISO</a></li>
-                <li><a href="../FAIme/cloud">Debian cloud images</a></li>
-                <li><a href="../FAIme/live">Debian live images</a></li>
-              </ul>
 
+            <!--#include virtual="select-menu.html" -->
 	    <div class="divider"></div>
 	    <p>
               This image will do an unattended installation of Debian
