--- a/FAIme-ubuntu/index.html
+++ b/FAIme-ubuntu/index.html
@@ -40,14 +40,10 @@
 	<div class="row">
 	  <div class="col s12">
 	    <h5>
-	      FAI.me. Build your own installation ISO for <b>Ubuntu 24.04</b>
+	      FAI.me. Build your own <b>installation ISO for Ubuntu 24.04</b>
             <!--#include virtual="bug.html" -->
-	    </h5>
-              <ul style="font-size: 120%" class="browser-default">
-                <li><a href="../FAIme">Debian installation ISO</a></li>
-                <li><a href="../FAIme/cloud">Debian cloud images</a></li>
-                <li><a href="../FAIme/live">Debian live images</a></li>
-              </ul>
+
+	      <!--#include virtual="select-menu.html" -->
 
 	    <div class="divider"></div>
 	    <p>
