--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -41,12 +41,9 @@
 	  <div class="col s12">
 	    <h5>
 	      FAI.me. Build your own <b>Debian cloud image</b>
-	    </h5>
-              <ul  style="font-size: 120%" class="browser-default">
-                <li><a href="../../FAIme-ubuntu">Ubuntu installation ISO</a></li>
-                <li><a href="../../FAIme">Debian installation ISO</a></li>
-                <li><a href="../live">Debian live ISO</a><p></li>
-              </ul>
+
+              <!--#include virtual="../select-menu.html" -->
+
 	    <div class="divider"></div>
 	    <p>
               This FAI.me image is a bootable disk image that can be
