--- a/FAIme/live/index.html
+++ b/FAIme/live/index.html
@@ -41,12 +41,8 @@
 	  <div class="col s12">
 	    <h5>
 	      FAI.me. Build your own <b>Debian live image</b>
-	    </h5>
-              <ul  style="font-size: 120%" class="browser-default">
-                <li><a href="../../FAIme-ubuntu">Ubuntu installation ISO</a></li>
-                <li><a href="../../FAIme">Debian installation ISO</a></li>
-                <li><a href="../cloud">Debian cloud ISO</a></li>
-              </ul>
+
+	      <!--#include virtual="../select-menu.html" -->
 	    <div class="divider"></div>
 	    <p>
               This live image that can be used on a notebook, PC or
