fix some broken URLs

--- a/references/index.html
+++ b/references/index.html
@@ -67,7 +67,7 @@
           <img class="imgframe" alt="FAI user" src="pics/spotify.png"></a>
         <a href="https://www.switch.ch">
           <img class="imgframe" alt="FAI user" src="pics/switch.png"></a>
-        <a href="https://www.rbg.informatik.tu-darmstadt.de/">
+        <a href="https://www.isp.informatik.tu-darmstadt.de">
           <img class="imgframe" alt="FAI user" src="pics/tu-darmstadt.png"></a>
         <a href="http://www.sanger.ac.uk">
           <img class="imgframe" alt="FAI user" src="pics/sanger.png"></a>
@@ -99,7 +99,7 @@
           <img class="imgframe" alt="FAI user" src="pics/lvm.png"></a>
         <a href="http://informatik.uni-koeln.de/">
           <img class="imgframe" alt="FAI user" src="pics/koeln.png"></a>
-        <a href="https://www.opensides.be">
+        <a href="https://www.fusiondirectory.org">
           <img class="imgframe" alt="FAI user" src="pics/opensides.png"></a>
         <a href="https://www.gl-systemhaus.de">
           <img class="imgframe" alt="FAI user" src="pics/gundl.png"></a>
@@ -117,8 +117,7 @@
           <img class="imgframe" alt="FAI user" src="pics/hildesheim.png"></a>
         <a href="http://nedap-healthcare.com">
           <img class="imgframe" alt="FAI user" src="pics/nedap.png"></a>
-        <a href="http://www.wolke.hs-furtwangen.de">
-          <img class="imgframe" alt="FAI user" src="pics/hfu.png"></a>
+          <img class="imgframe" alt="FAI user" src="pics/hfu.png">
         <a href="https://www.linuxhotel.de">
           <img class="imgframe" alt="FAI user" src="pics/linuxhotel.png"></a>
         <a href="https://alarm-dispatcher.de">
@@ -129,7 +128,7 @@
           <img class="imgframe" alt="FAI user" src="pics/ise.png"></a>
         <a href="https://lihas.de">
           <img class="imgframe" alt="FAI user" src="pics/lihas.png"></a>
-        <a href="http://www.info.univ-angers.fr/leria/">
+        <a href="https://leria.univ-angers.fr">
           <img class="imgframe" alt="FAI user" src="pics/angers.png"></a>
         <a href="https://das-netzwerkteam.de/">
           <img class="imgframe" alt="FAI user" src="pics/netzwerkteam.png"></a>
@@ -137,7 +136,7 @@
           <img class="imgframe" alt="FAI user" src="pics/sagemcom.png"></a>
         <a href="https://platon.net">
           <img class="imgframe" alt="FAI user" src="pics/platon-technologies.png" ></a>
-        <a href="https://www.ocadogroup.com/technology/technology-pioneers">
+        <a href="https://www.ocadogroup.com/solutions/our-technology">
           <img class="imgframe" alt="FAI user" src="pics/ocado.png" ></a>
         <a href="https://www.mpsd.mpg.de">
           <img class="imgframe" alt="FAI user" src="pics/mpsd.png" ></a>
