--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -61,7 +61,7 @@ It supports openSUSE, Ubuntu  and their Tuxedo_OS.
 <li> <a href="https://qlustar.com/">Qlustar</a> is a HPC Linux OS
 based on Ubuntu using FAI as installer for the master node
 
-<li> <a href="https://oss.gonicus.de/labs/gosa/">GOsa</a> a PHP
+<li> <a href="https://github.com/gosa-project/">GOsa</a> a PHP
 web framework for managing accounts and systems in LDAP
 databases. This project is stalled.
 <li><a href="https://www.fusiondirectory.org/">FusionDirectory</a> a
