--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
-<li>[Aug, 17, 2024] The FAIme web service now supports Debian live images</li>
+<li>[Aug, 17, 2024] The FAIme web service now supports Debian live
+  images, <a href="https://debconf24.debconf.org/talks/136-a-web-service-for-building-your-own-customized-debian-live-image/">presentation</a>
+  at DebConf24</li>
 <li>[June 20, 2024] The FAIme service provides customized installation media using Debian 13 (testing aka Trixie) and Ubuntu 24.04</li>
 <li>[Mar 9, 2024] <a href="/fai-cd/">New ISO images</a> availabe using FAI 6.2.2</li>
 <li>[Jan 21, 2024] FAI 6.2 <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2024-January/013148.html">released</a></li>
