--- a/talks/index.html
+++ b/talks/index.html
@@ -131,6 +131,7 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 talk about d-i <a
 href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-cambridge/my-two-cents-on-d-i.vp9.webm">video</a>, <a href="/doc/cmb-17-2.pdf">Slides</a>
 </ul>
+<li>Vortrag im Linux-Workshop Köln (2018)
 <li>Chemnitzer Linuxtag 2018: Talk:<a href="https://chemnitzer.linux-tage.de/2018/en/programm/beitrag/273">FAI.me, ein Buildserver für individuelle Installationsmedien</a>
 (<a href="https://chemnitzer.linux-tage.de/2018/media/programm/papers/273_FAI.me_ein_Buildserver_f_r_individuelle_Installationsmedien_folien_chemnitz-2_pMBI7Us.pdf">slides</a>,
 <a href="https://chemnitzer.linux-tage.de/2018/en/programm/beitrag/273#video">video</a>)
@@ -168,7 +169,7 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 <p>
 
 <ADDRESS>
-  Thu, 05 Sep 2024 13:15:58 +0200
+  Fri, 20 Dec 2024 13:55:05 +0100
 </ADDRESS>
 
 
