--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
+<li>[Dec 21, 2024] <a href="https://blog.fai-project.org/posts/25-years-of-fai/">Happy 25th birthday FAI!</a></li>
 <li>[Aug, 17, 2024] The FAIme web service now supports Debian live
   images, <a href="https://debconf24.debconf.org/talks/136-a-web-service-for-building-your-own-customized-debian-live-image/">presentation</a>
   at DebConf24</li>
