main header now two lines

--- a/FAIme/live/index.html
+++ b/FAIme/live/index.html
@@ -39,10 +39,11 @@
 	<!-- Top text -->
 	<div class="row">
 	  <div class="col s12">
-	    <h5>
-	      FAI.me. Build your own <b>Debian live image</b>
+	    <h5 style="text-align: center; line-height: 200%">
+	      FAI.me. Build your own </br> <b>Debian Live Image</b>
 
 	      <!--#include virtual="../select-menu.html" -->
+              <!--#include virtual="bug.html" -->
 	    <div class="divider"></div>
 	    <p>
               This live image that can be used on a notebook, PC or
