--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -39,8 +39,8 @@
 	<!-- Top text -->
 	<div class="row">
 	  <div class="col s12">
-	    <h5>
-	      FAI.me. Build your own <b>Debian cloud image</b>
+	    <h5 style="text-align: center; line-height: 200%">
+	      FAI.me. Build your own </br> <b>Debian Cloud Image</b>
 
               <!--#include virtual="../select-menu.html" -->
 
