--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -40,7 +40,8 @@
 	<div class="row">
 	  <div class="col s12">
 	    <h5>
-	      FAI.me. Build your own  <b>installation ISO for Debian</b>
+	    <h5 style="text-align: center; line-height: 200%">
+	      FAI.me. Build your own </br>  <b>Installation ISO for Debian</b>
             <!--#include virtual="bug.html" -->
 
             <!--#include virtual="select-menu.html" -->
