add bug include, change info

--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -42,12 +42,14 @@
 	    <h5 style="text-align: center; line-height: 200%">
 	      FAI.me. Build your own </br> <b>Debian Cloud Image</b>
 
+              <!--#include virtual="bug.html" -->
               <!--#include virtual="../select-menu.html" -->
 
 	    <div class="divider"></div>
 	    <p>
               This FAI.me image is a bootable disk image that can be
-              used with any virtual machine. It's running a 64bit Debian Linux.
+              used with any virtual machine or on real hardware using
+              BIOS boot. It's running a 64bit Debian Linux.
    	    </p>
 
           </div>
